--- a/assets/lang/da.json
+++ b/assets/lang/da.json
@@ -38,5 +38,14 @@
 	},
 	"copyright": {
 		"content": "2022 - Lukas Vendel Mann - Alle rettigheder forbeholdes"
+	},
+	"homePageWelcome": {
+		"content": "Velkommen til"
+	},
+	"homePageIntro": {
+		"content": "Dette er Vendel.dk, en hjemmeside til familien Vendel. Her ligger ønskelister for familiemedlemmer og kommende begivenheder."
+	},
+	"homePageInfo": {
+		"content": "Hvis du er en del af familien Vendel er du velkommen til at oprette en bruger."
 	}
 }
